fixed the articles overlapping and the fixed the size of the image

--- a/src/css/home.css
+++ b/src/css/home.css
@@ -50,7 +50,7 @@ h1 {
     background: -ms-linear-gradient(top, #555555 0%,#444444 100%); / IE10+ /
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#555555', endColorstr='#444444',GradientType=0 ); / IE6-9 /
     background: linear-gradient(top, #555555 0%,#444444 100%); / W3C /*/
-    height: 60px;
+    height: 65px;
     padding: 10px;
     border-bottom: 1px solid #F7393B;
 }
@@ -85,8 +85,8 @@ h1 {
     margin-right: 40px;
 }
 #img {
-    width: 65px;
-    height: 65px;
+    width: 50px;
+    height: 50px;
     position: absolute;
     right: 0px;
     bottom: 7px;
